# algotrader-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: benchmark.h  binance_feed.h  coinbase_feed.h  config.h  crypto.h  exchange_api.h  format.h  json.h  logger.h  market_socket.h  requests.h  thread_queue.h  trader.h  wallet.h  wallet_binance.h  wallet_coinbase.h
python/: market_feed.py  monitor_book.py  order_book.py  test-binance.py  test-coinbase.py  test.py  tui.py  tui_wins.py  util.py
src/: CMakeLists.txt  benchmark.cpp  crypto.cpp  exchange_api.cpp  json.cpp  main.cpp  requests.cpp
tests/: CMakeLists.txt  test_get_json_member.cpp  test_requests.cpp  test_trader.cpp
tests/market_feed/: CMakeLists.txt  binance_feed.cpp  coinbase_feed.cpp  exchange_orderbooks.cpp
tests/wallet/: CMakeLists.txt  binance_wallet.cpp  coinbase_wallet.cpp
